Fixed the white space in the membership card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@
 }
 
 .price-content {
-  padding: 4.8rem;
+  padding: 0 4.8rem 4.8rem 4.8rem;
 }
 
 .price-tags {
@@ -214,6 +214,7 @@
   display: inline-block;
   padding: 0.4rem 0.8rem;
   font-size: 1.2rem;
+  font-weight: 600;
   text-transform: uppercase;
   background-color: #4ac2d4;
   color: #fff;
@@ -226,7 +227,7 @@
   justify-content: center;
   align-items: center;
 
-  padding: 4.8rem 0 0 0;
+  padding: 4.8rem;
 }
 
 .cost-eu {
@@ -246,6 +247,7 @@
 
 .cost-currency {
   font-size: 1.6rem;
+  color: #777;
   /* font-weight: 500; */
 }
 
